@@ -16,7 +16,7 @@ reporting problems and making useful suggestions.
   * Bug# 2867
 
   Laurent Meunier <meunier.laurent@laposte.net>
-  * Bug# 3062
+  * Bug# 3062, 3073
 
 Translators (sorted by language):
 ----------------------------------
